# agentome

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
.github/workflows/: test.yml
docs/: DESIGN.md  FRONTEND.md  PLANS.md  PRODUCT_SENSE.md  QUALITY_SCORE.md  RELIABILITY.md  SECURITY.md
docs/design-docs/: core-beliefs.md  harness-architecture.md  index.md  review-loop-and-autonomy.md
docs/exec-plans/: tech-debt-tracker.md
docs/exec-plans/active/: README.md  issue-1-default-to-latest-if-version-is-not-available.md  issue-2-add-s3-artifact-store-support.md  issue-3-provided-docker-container.md  issue-4-publish-to-pypi.md
docs/exec-plans/completed/: README.md  issue-2-add-s3-artifact-store-support.md
docs/product-specs/: agent-harness-contract.md  index.md
docs/references/: index.md
scripts/: check-harness-docs.sh  check-markdown-links.sh  check-plan-issue-links.sh  check-python-test-typing-policy.sh  sync-plans-from-issues.sh  test_tools.py  upload_artifacts_to_s3.py
src/agentome/: __init__.py  __main__.py  cli.py  config.py  models.py  server.py  store.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_s3_integration.py  test_s3_store.py  test_server_tools.py  test_upload_artifacts_script.py  test_utils.py
