[project]
name = "agentome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Korbinian Schweiger", email = "korbinian.schweiger@gmail.com" },
]
requires-python = ">=3.14"
dependencies = [
    "click>=8.3.1",
    "fastmcp>=3.1.1",
    "pydantic>=2.12.5",
]

[project.scripts]
agentome = "agentome:main"

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
