[project]
name = "agentome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
  { name = "Korbinian Schweiger", email = "korbinian.schweiger@gmail.com" },
]
requires-python = ">=3.14"
dependencies = ["click>=8.3.1", "fastmcp>=3.1.1", "pydantic>=2.12.5"]

[project.scripts]
agentome = "agentome.cli:cli"
agentome-bootstrap = "agentome.cli:bootstrap_bucket_entrypoint"

[project.optional-dependencies]
s3 = ["boto3>=1.42.91", "boto3-stubs[s3]>=1.42.91"]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "s3_integration: tests requiring live S3-compatible endpoint",
]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "ANN"]
